fixed image link and horizontal scroll

--- a/css/overviewstyles.css
+++ b/css/overviewstyles.css
@@ -439,16 +439,24 @@ font-family: 'KTFold-Regular';
     margin-top: 0px;
   }
 
+  .container{
+    z-index: -100;
+  }
+
   #horizontal-img-scroll{
     width: 100%;
     height: 80vh;
-    /* overflow-x: scroll;
-    overflow-y: hidden; */
     display: flex;
     flex-wrap: nowrap;
     padding-bottom: 50px;
     margin-bottom: 100px;
-    z-index: 0;
+    z-index: -10;
+  }
+
+  #horizontal-img-scroll-container{
+    width: 100% !important;
+    overflow-x: hidden;
+    z-index: 100;
   }
 
   #horizontal-img-scroll-two{
